--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0"
+  },
+  "engines": {
+    "npm": ">=4.0.0"
   }
 }
